--- a/web/composer.json
+++ b/web/composer.json
@@ -14,11 +14,15 @@
         "symfony/framework-bundle": "4.3.*",
         "symfony/orm-pack": "^1.0",
         "symfony/property-info": "4.3.*",
+        "symfony/security-bundle": "4.3.*",
+        "symfony/twig-bundle": "4.3.*",
         "symfony/validator": "4.3.*",
         "symfony/yaml": "4.3.*"
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.12"
+        "doctrine/doctrine-fixtures-bundle": "^3.2",
+        "symfony/maker-bundle": "^1.12",
+        "symfony/profiler-pack": "^1.0"
     },
     "config": {
         "preferred-install": {
