--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,10 @@
         "doctrine/annotations": "^1.6",
         "sensio/framework-extra-bundle": "^5.4",
         "symfony/apache-pack": "^1.0",
+        "symfony/asset": "4.3.*",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
+        "symfony/event-dispatcher": "4.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.3.*",
         "symfony/orm-pack": "^1.0",
