--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,3 +36,9 @@ security:
         # - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+    role_hierarchy:
+        ROLE_ADMIN: [ROLE_USER]
+        ROLE_TEACHER: [ROLE_USER]
+        ROLE_STUDENT: [ROLE_USER]
+        ROLE_SUPER_ADMIN: [ROLE_ADMIN]
+        
