--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -37,8 +37,8 @@ security:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
     role_hierarchy:
-        ROLE_ADMIN: [ROLE_USER]
+        ROLE_SUPER_ADMIN: [ROLE_ADMIN]
+        ROLE_ADMIN: [ROLE_TEACHER, ROLE_STUDENT]
         ROLE_TEACHER: [ROLE_USER]
         ROLE_STUDENT: [ROLE_USER]
-        ROLE_SUPER_ADMIN: [ROLE_ADMIN]
         
