--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/annotations": "^1.6",
+        "friendsofsymfony/rest-bundle": "^2.5",
+        "nelmio/cors-bundle": "^1.5",
+        "primus852/symfony-short-response": "dev-master",
         "sensio/framework-extra-bundle": "^5.4",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "4.3.*",
@@ -13,11 +16,13 @@
         "symfony/dotenv": "4.3.*",
         "symfony/event-dispatcher": "4.3.*",
         "symfony/flex": "^1.3.1",
+        "symfony/form": "4.3.*",
         "symfony/framework-bundle": "4.3.*",
         "symfony/monolog-bundle": "^3.4",
         "symfony/orm-pack": "^1.0",
         "symfony/property-info": "4.3.*",
         "symfony/security-bundle": "4.3.*",
+        "symfony/serializer-pack": "^1.0",
         "symfony/translation": "4.3.*",
         "symfony/twig-bundle": "4.3.*",
         "symfony/validator": "4.3.*",
