--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -11,6 +11,8 @@ framework:
         cookie_secure: auto
         cookie_samesite: lax
 
+    validation: { enabled: true, enable_annotations: true }
+    
     #esi: true
     #fragments: true
     php_errors:
