--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -8,4 +8,12 @@ before:
     defaults:   {_locale: fr}
     requirements:
         _locale: en|fr
-        
+
+app.swagger_ui:
+    path: /api/doc
+    methods: GET
+    defaults: { _controller: nelmio_api_doc.controller.swagger_ui }
+app.swagger:
+    path: /api/doc.json
+    methods: GET
+    defaults: { _controller: nelmio_api_doc.controller.swagger }
