--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "symfony/validator": "4.3.*",
         "symfony/webpack-encore-bundle": "^1.6",
         "symfony/yaml": "4.3.*",
-        "twig/extensions": "^1.5"
+        "twig/extensions": "^1.5",
+        "willdurand/hateoas": "^3.1"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.2",
