--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "symfony/webpack-encore-bundle": "^1.6",
         "symfony/yaml": "4.3.*",
         "twig/extensions": "^1.5",
-        "willdurand/hateoas": "^3.1"
+        "willdurand/hateoas": "^3.1",
+        "zircote/swagger-php": "^3.0"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.2",
