--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -38,7 +38,8 @@ security:
         # - { path: ^/profile, roles: ROLE_USER }
     role_hierarchy:
         ROLE_SUPER_ADMIN: [ROLE_ADMIN]
-        ROLE_ADMIN: [ROLE_TEACHER, ROLE_STUDENT]
+        ROLE_ADMIN: [ROLE_CLUB_MANAGER]
+        ROLE_CLUB_MANAGER: [ROLE_TEACHER, ROLE_STUDENT]
         ROLE_TEACHER: [ROLE_USER]
         ROLE_STUDENT: [ROLE_USER]
         
