--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
         "symfony/event-dispatcher": "4.3.*",
+        "symfony/filesystem": "4.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/form": "4.3.*",
         "symfony/framework-bundle": "4.3.*",
