--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "symfony/property-info": "4.3.*",
         "symfony/security-bundle": "4.3.*",
         "symfony/serializer-pack": "^1.0",
+        "symfony/swiftmailer-bundle": "^3.2",
         "symfony/translation": "4.3.*",
         "symfony/twig-bundle": "4.3.*",
         "symfony/validator": "4.3.*",
