--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "friendsofsymfony/rest-bundle": "^2.5",
         "nelmio/cors-bundle": "^1.5",
         "primus852/symfony-short-response": "dev-master",
+        "rollerworks/password-strength-bundle": "^2.1",
         "sensio/framework-extra-bundle": "^5.4",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "4.3.*",
