--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -1,7 +1,7 @@
 controllers:
     resource: ../../src/Controller/
     type: annotation
-    requirements:
-        _locale: '%app_locales%'
-    defaults:
-        _locale: '%locale%'
+
+kernel:
+    resource: ../../src/Kernel.php
+    type: annotation
