--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,8 @@
         "symfony/webpack-encore-bundle": "^1.6",
         "symfony/yaml": "4.3.*",
         "twig/extensions": "^1.5",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/twig": "^2.12|^3.0",
         "willdurand/hateoas": "^3.1",
         "zircote/swagger-php": "^3.0"
     },
