--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -10,6 +10,7 @@ framework:
         handler_id: ~
         cookie_secure: auto
         cookie_samesite: lax
+        save_path: '%kernel.project_dir%/var/sessions/%kernel.environment%'
 
     validation: { enabled: true, enable_annotations: true }
     
